# experiments

./: .gitignore  README.md  new.sh
2021-05-11-gpu-text/: Cargo.toml  README.md
2021-05-11-gpu-text/src/: main.rs
2021-05-11-instanced-lines/: Cargo.toml  README.md
2021-05-11-instanced-lines/src/: main.rs  shader.frag  shader.vert  shader.vert.spv
2021-05-11-instanced-rects/: README.md
2021-05-11-instanced-rects/src/: main.rs  shader.vert  shader.vert.spv
2021-05-12-circles/: Cargo.toml  README.md
2021-05-12-circles/src/: main.rs  shader.frag  shader.vert  shader.vert.spv
2021-05-12-generalized-drawables/: Cargo.toml
2021-05-12-generalized-drawables/src/: layer.rs  main.rs  shader.frag.spv
2021-05-12-generalized-drawables/src/circle/: mod.rs
2021-05-12-generalized-drawables/src/line/: mod.rs  shader.vert
2021-05-12-points/: README.md
2021-05-12-points/src/: main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
2021-05-14-transformation-matrix/src/: layer.rs  main.rs
2021-05-17-cursor-change/: Cargo.toml  README.md
2021-05-17-cursor-change/src/: main.rs  zoom.rs
2021-05-20-animated-lines/: Cargo.toml  README.md
2021-05-20-animated-lines/src/: main.rs  shader.vert
2021-05-20-z-buffer/: Cargo.toml  README.md
2021-05-20-z-buffer/src/: main.rs  shader.frag  shader.vert
2021-05-24-z-buffer-wgsl/: Cargo.toml
2021-05-24-z-buffer-wgsl/src/: main.rs  shader.frag  shader.vert  shader.wgsl
2021-05-25-compute-shader/: Cargo.toml
2021-05-25-compute-shader/examples/: spotcheck.rs
2021-05-25-compute-shader/src/: main.rs  shader.wgsl
(+7 files in other folders)
