[package]
name = "gpu-text"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
futures = "0.3.15"
wgpu = "0.7.0"
wgpu_glyph = "0.11.0"
winit = "0.24.0"
