[package]
name = "z-buffer"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
futures = "0.3.15"
wgpu = "0.8.1"
winit = "0.24.0"
