[package]
name = "compute-shader"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.1"
env_logger = "0.8.3"
pollster = "0.2.4"
wgpu = "0.8.1"

[dev-dependencies]
clap = { version = "3.0.0-alpha-2", features = ["derive"] }
